# GioiaAnalysis

./: .gitignore  LICENSE  README.md  gioia_auswerten.py  helper_functions.py  langchain_handler.py  parse_interview_transcripts.py  pyproject.toml  vizualisation.py
02_processed/: 240105 Transkript - Markus Lehmann - IBB Ventures.docx  250219 TRC Tim Bussiek - Hiflier.docx  250402 TRC Christian Schütz - Fraunhofer.docx  250407 TRC Claudia Decher.docx  250407 TRC Max Salamon - The Colony.docx  250409 TRC Markus Poschenrieder - LeistungsLotse.docx  250410 TRC Nadine Roth - Feminist Law Clinic.docx  250414 TRC Axel Nissler - German Volunteers.docx
03_files/: all_interviews.json  normalized_second_level_themes.json  second_level_themes.json
db/: schema.py
