[project]
name = "gioiaanalysis"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "kaleido>=1.0.0",
    "langchain-openai>=0.3.30",
    "matplotlib>=3.10.5",
    "openai>=1.99.9",
    "pandas>=2.3.1",
    "pandas-stubs==2.3.0.250703",
    "pathlib>=1.0.1",
    "plotly>=6.3.0",
    "pydantic-settings>=2.10.1",
    "python-docx>=1.2.0",
    "ruff>=0.12.9",
    "seaborn>=0.13.2",
]
